# UglyChain

./: .clinerules  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CNAME  LICENSE  README.md  README_zh.md  TODO.md  index.html  mkdocs.yml  objects.inv  project-status.md  pyproject.toml  sitemap.xml  test2.py
.github/workflows/: release.yml  tag.yml  test.yml
Agent/react/: index.html
Agent/retriever/: index.html
Agent/structured/: index.html
Agent/tools/: index.html
Chain/llm/: index.html
Chain/mapchain/: index.html
Chain/reactchain/: index.html
Chain/reducechain/: index.html
Worker/ci/: index.html
Worker/classify/: index.html
Worker/plan/: index.html
Worker/summary/: index.html
Worker/worker/: index.html
about/: index.html
api/core/: index.html
api/llm/: index.html
api/react/: index.html
api/tools/: index.html
chain/: index.html
cn/: index.html
cn/api/core/: index.html
cn/api/tools/: index.html
cn/development/: index.html
cn/examples/: index.html
cn/guide/configuration/: index.html
cn/guide/quickstart/: index.html
config/: index.html
development/: index.html
docs/: chain.md  config.md  examples.md  index.md  install.md  llm.md  mapchain.md  quickstart.md  roadmap.md  tools.md
docs/Agent/: react.md  retriever.md  structured.md  tools.md
docs/Chain/: llm.md  mapchain.md  reactchain.md  reducechain.md
docs/Worker/: ci.md  classify.md  plan.md  summary.md  worker.md
docs/api/: llm.md  react.md
docs/en/: development.md  index.md
docs/en/api/: tools.md
docs/en/guide/: configuration.md
docs/zh/: examples.md  index.md
docs/zh/api/: core.md
docs/zh/guide/: quickstart.md
en/: index.html
en/api/core/: index.html
en/api/tools/: index.html
en/development/: index.html
en/examples/: index.html
en/guide/configuration/: index.html
en/guide/quickstart/: index.html
examples/: browser_use.py  chat_with_image.py  classify.py  code_interpreter.py  coder.py  extend_model.py  index.html  instructor.py  llama-index.py  llm.py  map.py  mcp.py  mcp_tool.py  novel.py  plan.py  plan_and_code.py  planner.py  rag.py  react.py  reduce.py  retrievers.py  schema.py  shell_command.py  simple_chatbot.py  structured.py  summary.md  summary.py  think.py  tools.py  utils.py
guide/configuration/: index.html
guide/quickstart/: index.html
install/: index.html
introduction/: index.html
llm/: index.html
mapchain/: index.html
quickstart/: index.html
react/: index.html
reducechain/: index.html
search/: search_index.json
src/uglychain/: __init__.py  action.py  client.py  client_aisuite.py  client_litellm.py  config.py  console.py  default_tools.py  llm.py  load.py  logger.py  mcp.py  prompt.py  react.py  react_action.py  response_format.py  schema.py  session.py  structured.py  task.py  think.py  tool.py  tools.py  utils.py
src/uglychain/_react/: __init__.py  action.py  base.py
src/uglychain/console/: __init__.py  base.py  memory.py  rich.py  simple.py
src/uglychain/plan/: __init__.py  plan.py  prompt.py
src/uglychain/planner/: plan.py  prompt.py
src/uglychain/react/: __init__.py  action.py  base.py  core.py  default.py  get_process.py  prompt.py
src/uglychain/tasks/: __init__.py  flow.py  node.py  planner.py  prompt.py  task.py
src/uglychain/tools/: .gitignore  __init__.py  base.py  coder.py  core.py  default.py  final_answer.py  function_schema.py  mcp.py  schema.py  tool.py  tool_manager.py  tools.py
src/uglychain/utils/: __init__.py  _load_utils.py  _parse.py  _response_parser.py  fastapi.py  fastapi_wrappers.py  logger.py  message_bus.py  retry.py  stream.py  (+3 more)
tests/: conftest.py  test_action.py  test_client.py  test_client_aisuite.py  test_config.py  test_console.py  test_default_tools.py  test_llm.py  test_load.py  test_prompt.py  test_react.py  test_react_action.py  test_response_format.py  test_schema.py  test_session.py  test_structured.py  test_think.py  test_tool.py  test_uglychain.py  test_version.py
tests/chains/: test_llm.py  test_map.py  test_react.py  test_tools.py
tests/console/: test_base.py  test_console.py  test_memory.py  test_rich.py  test_simple.py
tests/plan/: test_prompt.py
tests/provider/: test_aisuite.py  test_baichuan.py  test_chatgpt.py  test_custom.py  test_dashscope.py  test_gemini.py  test_ollama.py  test_sparkai.py  test_yi.py  test_zhipu.py
tests/react/: test_react.py  test_react_action.py
tests/tasks/: test_node.py  test_planner.py  test_prompt.py  test_task.py
tests/tools/: test_coder.py  test_default.py  test_mcp.py  test_tool.py  test_tool_manager.py
tests/utils/: test_fastapi_wrappers.py  test_load_utils.py  test_message_bus.py  test_parse.py  test_retry.py  test_singleton.py  test_stream.py  test_xml_parse.py
tests/worker/: test_classify.py
tools/: index.html
uglychain/: __init__.py
uglychain/chains/: __init__.py  base.py  map.py  react.py  react_back.py  react_bad.py  react_new.py  reduce.py
uglychain/examples/: llm.py  map.py  reduce.py  retrievers.py
uglychain/llm/: __init__.py  base.py  instructor.py  instructor_yaml.py  llama_index.py  model.py  tool.py  tools.py
uglychain/provider/: __init__.py  baichuan.py  chatgpt.py  copilot.py  custom.py  dashscope.py  gemini.py  model.py  ollama.py  openai_api.py  sparkapi.py  yi.py  zhipu.py
uglychain/retrievers/: __init__.py  arxiv.py  base.py  bing.py  bm25.py  combine.py  custom.py  llama_index.py  model.py  open_procedures.py  retrieve_with_llm.py
uglychain/storage/: __init__.py  base.py  dill.py  file.py  llama_index.py  sqlite.py
uglychain/tools/: __init__.py  code_runner.py  search.py  text_completion.py
uglychain/utils/: __init__.py  config.py  enum.py  nlp.py  retry_decorator.py  singleton.py  stop_words.py
uglychain/woker/: base.py  ci.py  classify.py  code_interpreter.py  plan.py  planner.py  summary.py  transformer.py
uglychain/worker/: __init__.py  api.py  base.py  classify.py  code_interpreter.py  developer.py  planner.py  sqlite.py  storage.py  summary.py  transformer.py
zh/: index.html
zh/development/: index.html
zh/examples/: index.html
(+63 files in other folders)
